<resources>
    <string name="app_name">Infos cities</string>
    <string name="title">Info Cities</string>
    <string name="home_hint">Entrez le nom de pay...</string>
    <string name="explorer">Explorer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connecter">connecter</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="s_inscrire">s\'inscrire</string>
    <string name="welcome_n_s">Bienvenue \n %s</string>


    <!--    info casa-->
    <string name="casablancaCityName">
    Casablanca (en berbère : Anfa, litt. « colline », en arabe : الدار البيضاء4)
</string>
    <string name="casablancaSmallDesc">
    est une ville située au centre-ouest du Maroc. Capitale économique du pays5,6 et plus grande ville du Maghreb par la population, elle est située sur la côte atlantique, à environ 80 km au sud de Rabat, la capitale administrative.
</string>
    <string name="casablancaFullDesc">
    Sur le plan administratif, son territoire — à distinguer de celui de l\\\'agglomération incluant sa banlieue — d\\\'une superficie de 384 km23, correspond à celui de la préfecture de Casablanca, chef-lieu de la région Casablanca-Settat. Depuis le retour au principe de l\\\'unité de la ville en 20027, il est composé d\\\'une part de la municipalité de Casablanca, divisée en 16 arrondissements répartis dans 8 préfectures d\\\'arrondissement(s), et d\\\'autre part de la minuscule municipalité du Méchouar de Casablanca placée en son centre et où siège un palais royal8.
</string>
    <string name="casablancaWebsite">
    http://www.casablancacity.ma/
</string>
    <string name="casablancaHabitans">
        4 270 750
    </string>


    <!--    info rabat-->

    <string name="rabatCityName">
        Rabat (en arabe : الرباط, ar-Ribāṭ ; en berbère : ⵔⵔⴱⴰⵟ, R-rbaṭ ; en darija : الرّباط, er-Rbaṭ) est la capitale du Maroc.
</string>
    <string name="rabatSmallDesc">
        A 40 km au sud de Kénitra et 240 km au sud-ouest de Tanger et du détroit de Gibraltar, et à 87 km au nord-est de Casablanca.
Elle est séparée de la ville de Salé au niveau de l\\\'embouchure du Bouregreg, d\\\'où leur surnom de « villes jumelles ».
    </string>
    <string name="rabatFullDesc">
Sur le plan administratif, son territoire — à distinguer de celui de l’agglomération rabataise incluant sa banlieue —
d\\\'une superficie de 118,5 km2, correspond à celui de la préfecture de Rabat qui, depuis le retour au principe de l\\\'unité de la ville en 20028,
est composée d\\\'une part de la commune urbaine de Rabat, divisée en cinq arrondissements ;
d\\\'autre part de la commune urbaine de Touarga, où se situe le palais royal, enclavée dans la première. Lors du dernier recensement de 2014,
sa population était de 577 827 habitants5, faisant de Rabat la 7e plus grande ville du royaume.</string>
    <string name="rabatWebsite">
        https://www.infostourismemaroc.com/ville/tourisme-maroc-ville-Rabat.html
    </string>
    <string name="rabatHabitans">577 827</string>

    <!--    info alger-->

    <string name="algerCityName">
        Alger (en arabe : الجزائر , est la capitale de l\'Algérie et en est la ville la plus peuplée.
</string>
    <string name="algerSmallDesc">
        Située au bord de la mer Méditerranée, la ville donne son nom à la wilaya dont elle est le chef-lieu.
La ville d\'Alger est en fait constituée de plusieurs communes et n\'a ni personnalité juridique, ni structure d\'administration en propre.
L\'unité urbaine d\'Alger comptait 2 481 788 habitants selon l\'Office national des statistiques algérien d\'après le dernier recensement de 20081.
    </string>
    <string name="algerFullDesc">
Avec 4,4 millions d\'habitants selon le ministère des Affaires étrangères français4,
tandis que l\'agglomération en comptait environ 6 727 806 habitants en 2010 suivant le classement des 100 plus grandes villes du monde par World Gazetteer
et 8 000 000 habitants en 2020 selon Population Data6, Alger est la première agglomération du Maghreb.

Fondée au ive siècle av. J.-C., comme comptoir phénicien en pays berbère, sous le nom d\'Ikosim, elle est occupée par les Romains, les Vandales, les Byzantins
 et les Arabes puis au début du Moyen Âge par la tribu berbère des Beni-Mezghana.
C\'est le souverain berbère de la dynastie ziride Bologhine ibn Ziri, au milieu du xe siècle qui fondera l\'Alger actuelle,
sous son nom El-Djazaïr ou Lezzayer, employé encore de nos jours pour la désigner en arabe et en berbère.
Elle ne prend son rôle de capitale de l\'Algérie qu\'à partir de la période de la régence d\'Alger en 1515.
    </string>
    <string name="algerWebsite">
        http://www.apc-algercentre.dz/
    </string>
    <string name="algerHabitans">2 481 788</string>

    <!--    info oran-->

    <string name="oranCityName">
        Oran (En arabe : وهران, est la deuxième plus grande ville d’Algérie2 et une des plus importantes villes du Maghreb.

    </string>
    <string name="oranSmallDesc">

C\'est une ville portuaire de la mer Méditerranée, située dans le nord-ouest de l\'Algérie, à 432 km de la capitale Alger, et le chef-lieu de la wilaya du même nom,
en bordure du golfe d\'Oran.
    </string>
    <string name="oranFullDesc">

La ville est située au fond d\'une baie ouverte au nord et dominée directement à l\'ouest par la montagne de l\'Aïdour (ou Murdjajo), d\'une hauteur de 580 mètres,
ainsi que par le plateau de Moulay Abd al Qadir al-Jilani. L\'agglomération s\'étend de part et d\'autre du ravin de l\'oued Rhi, maintenant couvert.

Fondée en 902 par les Andalous, Oran connaît une succession de dynasties arabo-berbères.
Occupée par les Espagnols en 1509, elle est définitivement reconquise en 1792 par le bey Mohammed El Kebir et devient le siège du beylik de l\'Ouest.
Pendant la colonisation française, elle connaît un développement rapide, et devient la deuxième ville d\'Algérie.
Après l\'indépendance, elle demeure la capitale économique de l\'ouest du pays et le principal centre financier, commercial et industriel.
    </string>
    <string name="oranWebsite">
        https://fr-fr.facebook.com/OranVilleOfficiel/
    </string>
    <string name="oranHabitans">609 940</string>
    <string name="habitants">Habitants :</string>
    <string name="description">Description</string>
    <string name="plus_d_info">plus d\'info</string>


</resources>