<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".view.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        >


        <TextView
            android:id="@+id/tv_login_title"
            style="@style/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/connecter"/>


        <EditText
            android:id="@+id/et_login_email"
            style="@style/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:inputType="textEmailAddress"
            android:layout_marginBottom="15dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/et_login_pwd"
            style="@style/et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:inputType="textPassword"

            android:hint="@string/password"/>


        <Button
            android:id="@+id/btn_login"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:text="@string/connecter"
             />
    </LinearLayout>




</FrameLayout>